--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,12 +12,12 @@
     "@expo/metro-runtime": "~4.0.0",
     "expo": "~52.0.18",
     "expo-router": "^4.0.11",
+    "expo-sqlite": "~15.0.3",
     "expo-status-bar": "~2.0.0",
     "react": "18.3.1",
     "react-dom": "^18.3.1",
-    "react-native": "0.76.5",
-    "react-native-web": "^0.19.13",
-    "expo-sqlite": "~15.0.3"
+    "react-native": "^0.76.5",
+    "react-native-web": "^0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
